# paitu

./: designs.typ  jingguang.pyetgr  jingha.pyetgr  jinghu.pyetgr  readme-art-banner.typ  readme.md  shell.nix  test.typ  typst.toml
examples/: readme.md  sample.pyetgr  sample.typ
src/: deps.typ  lib.typ  modular_test.typ  paiagram.typ  paiagram_wasm.wasm  test.typ  utils.typ
src/elem/: diagram.typ  mod.typ  stations.typ  trains.typ
src/foreign/: mod.typ  qetrc.typ
wasm/: Cargo.toml  build
wasm/src/: lib.rs  types.rs  utils.rs
wasm/src/models/: graph.rs  input.rs  input.rs.bk  mod.rs  output.rs
