[package]
name = "paiagram-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-minimal-protocol = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
ciborium = "0.2.2"
indexmap = { version = "2.9.0", features = ["serde"] }
arrayvec = { version = "0.7.6", features = ["serde"] }
serde-big-array = "0.5.1"
petgraph = {version = "0.8.1", features = ["serde-1"]}
typst-wasm-protocol = "0.0.2"
anyhow = "1.0.98"
bimap = "0.6.3"
multimap = "0.10.1"

[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary
opt-level = 3     # Optimize for speed
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
